--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head >
 	<meta charset = "UTF-8" />
 	<meta name = "viewport" content = "width=device-width, initial-scale=1.0" />
-	<link rel = "stylesheet" href = "styles.css" />
+	<link rel = "stylesheet" href = "styles/styles.css" />
 	<title >Eloquent JavaScript</title >
 </head >
 <body >
 <h1 >Eloquent JavaScript</h1 >
 
-<script src = "./main.js" ></script >
+<script src = "scripts/main.js" ></script >
 </body >
 </html >
